重构研究条件